--- a/Image Processing/thesis_gui.ui
+++ b/Image Processing/thesis_gui.ui
@@ -2,8 +2,9 @@
 <interface version="1.3">
   <object class="tk.Toplevel" id="top" named="True">
     <property name="height">800</property>
-    <property name="overrideredirect">True</property>
-    <property name="resizable">both</property>
+    <property name="overrideredirect">False</property>
+    <property name="resizable">none</property>
+    <property name="title" translatable="yes">Automatic Dimensional Measurement of Griffin Beakers using Machine Vision</property>
     <property name="width">800</property>
     <child>
       <object class="ttk.Frame" id="frame_main" named="True">
@@ -44,6 +45,7 @@
             <child>
               <object class="ttk.Button" id="btn_process_image" named="True">
                 <property name="command" type="command" cbtype="simple">btn_process_image_clicked</property>
+                <property name="state">disabled</property>
                 <property name="text" translatable="yes">Process Image</property>
                 <property name="width">20</property>
                 <layout manager="grid">
@@ -118,6 +120,7 @@
             </child>
             <child>
               <object class="ttk.Label" id="lbl_acquired_height" named="True">
+                <property name="state">disabled</property>
                 <property name="text" translatable="yes">&lt;height&gt;</property>
                 <layout manager="grid">
                   <property name="column">1</property>
@@ -141,6 +144,7 @@
             </child>
             <child>
               <object class="ttk.Label" id="lbl_acquired_outer_diameter" named="True">
+                <property name="state">disabled</property>
                 <property name="text" translatable="yes">&lt;outer diameter&gt;</property>
                 <layout manager="grid">
                   <property name="column">1</property>
@@ -164,6 +168,7 @@
             </child>
             <child>
               <object class="ttk.Label" id="lbl_acquired_volume" named="True">
+                <property name="state">disabled</property>
                 <property name="text" translatable="yes">&lt;volume&gt;</property>
                 <layout manager="grid">
                   <property name="column">1</property>
