--- a/Image Processing/thesis_gui.ui
+++ b/Image Processing/thesis_gui.ui
@@ -5,11 +5,11 @@
     <property name="overrideredirect">False</property>
     <property name="resizable">both</property>
     <property name="title" translatable="yes">Automatic Dimensional Measurement of Griffin Beakers using Machine Vision</property>
-    <property name="width">800</property>
+    <property name="width">1400</property>
     <child>
       <object class="ttk.Frame" id="frame_main" named="True">
         <property name="height">660</property>
-        <property name="width">1200</property>
+        <property name="width">1400</property>
         <layout manager="grid">
           <property name="column">0</property>
           <property name="row">0</property>
@@ -77,6 +77,7 @@
                   <property name="padx">0 40</property>
                   <property name="pady">40 0</property>
                   <property name="row">0</property>
+                  <property name="sticky">e</property>
                 </layout>
               </object>
             </child>
@@ -89,6 +90,7 @@
                   <property name="padx">0 40</property>
                   <property name="pady">40 0</property>
                   <property name="row">0</property>
+                  <property name="sticky">w</property>
                 </layout>
               </object>
             </child>
@@ -101,9 +103,9 @@
             <layout manager="grid">
               <property name="column">0</property>
               <property name="padx">40 0</property>
-              <property name="pady">100 0</property>
+              <property name="pady">200 0</property>
               <property name="row">2</property>
-              <property name="sticky">w</property>
+              <property name="sticky">sw</property>
             </layout>
             <child>
               <object class="ttk.Label" id="lbl_report_title" named="True">
